--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
     </nav>
     <section id="profile">
-        <div class="section_pic-container">
-            <img src="./assets/profile-pic.jpg" alt="Sidney Johnson Profile Pic">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic.png" alt="Sidney Johnson Profile Pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">
@@ -51,7 +51,7 @@
             </p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
-                    View My Resume
+                    My Resume
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
                     Contact Info
@@ -59,8 +59,14 @@
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My LinkedIn" class="icon" onclick="location.href='https://www.linkedin.com/in/sidney-johnson4705/'">
+                <img src="./assets/github.png" alt="My Github" class="icon" onclick="location.href='https://github.com/sidneyj475/'">
             </div>        
         </div>
+    </section>
+    <section id="about">
+        <p class="section__">
+
+        </p>
     </section>
     <script src="script.js"></script>
 </body>
