added pictures and about

--- a/index.html
+++ b/index.html
@@ -64,9 +64,35 @@
         </div>
     </section>
     <section id="about">
-        <p class="section__">
-
+        <p class="section__text__p1">
+            Get To Know More
         </p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.png" alt="Profile Picture" class="about-pic">
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png" alt="experience icon" class="icon">
+                        <h3>Experience</h3>
+                        <p>Software Engineering Intern</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="education icon" class="icon">
+                        <h3>Education</h3>
+                        <p>Bachelor of Science in Computer Science<br />Expected Graduation: May 2027</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dicta saepe, fuga odio similique ex. Quae iste minus deserunt nulla!
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'">
     </section>
     <script src="script.js"></script>
 </body>
